[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dsap-cli"
dynamic = ["version"]
description = "CLI tool for practicing data structures and algorithms using spaced repetition."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Juma Paul" }]
keywords = ["algorithms", "data-structures", "cli", "spaced-repetition"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.1,<9",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "rich>=13,<14",
]

[project.scripts]
dsap = "dsap.cli:main"

[project.urls]
Repository = "https://github.com/juma-paul/dsap-cli"
Issues = "https://github.com/juma-paul/dsap-cli/issues"
Changelog = "https://github.com/juma-paul/dsap-cli/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dsap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dsap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=dsap", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["dsap"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
pretty = true
strict = false
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_defs = false
